<resources>
    <string name="app_name">FirebaseIntegration</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>


    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="new_pass">New Password</string>
    <!--<string name="title_activity_profile">Firebase</string>-->
    <!--<string name="title_activity_login">Sign in</string>-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <!--<string name="hint_name">Fullname</string>-->
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not Having Account? Get register now!</string>
    <string name="btn_link_to_login">Already registered? Click here to login </string>
    <!--<string name="title_activity_reset_password">ResetPasswordActivity</string>-->
    <string name="btn_forgot_password">Forgot  password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>

    <string name="reset">Reset</string>
    <string name="change_password">Change Password</string>
    <string name="btn_send">Send</string>

    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_validation_message">Password too short, enter minimum 5 characters!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="registration_done">User registered successfully</string>
    <string name="reset_password_email_success">Reset password email is sent!</string>
    <string name="failed_to_send_email">Failed to send reset email!</string>
    <string name="password_updated">Password is updated, sign in with new password!</string>
    <string name="failed_to_update_password">Failed to update password!</string>
    <string name="enter_registerd_email">Enter your registered email id</string>
    <string name="reset_email_sent">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send_reset_email">Failed to send reset email!</string>
</resources>
